--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h1>Thet Thet Aung</h1>
         <p>Sharing is caring</p>
     </div>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+        <!--<div class="container-fluid">-->
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
@@ -32,7 +32,22 @@
                     <a href="#" class="nav-link">Service</a>
                 </li>
             </ul>
-        </div>
+        <!--</div>-->
     </nav>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-sm-2">
+                <h3>About me</h3>
+                <h5>Photo of me:</h5>
+                <img src="images/profile.png" alt="Profile Picture" class="rounded">
+            </div>
+            <div class="col-sm-8"></div>
+            <div class="col-sm-2"></div>
+        </div>
+    </div>
+
+    <div class="mt-5 p-4 text-center">
+        <p>Copyright @copy;. All right reserved by Tr.Thet Thet Aung</p>
+    </div>
 </body>
 </html>
