--- a/index.html
+++ b/index.html
@@ -39,9 +39,24 @@
             <div class="col-sm-2">
                 <h3>About me</h3>
                 <h5>Photo of me:</h5>
-                <img src="images/profile.png" alt="Profile Picture" class="rounded">
+                <img src="images/profile.png" alt="Profile Picture" class="img-thumbnail">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque minus,  at dolorem sint! Eveniet omnis quod maiores incidunt numquam.</p>
+                <h3>Useful Resources</h3>
+                <p>you may also need the websites.</p>
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item"><a href="" class="nav-link active">Link 1</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Link 2</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Link 3</a></li>
+                </ul>                
             </div>
-            <div class="col-sm-8"></div>
+            <div class="col-sm-8 post">
+                <div class="story">
+                <img src="images/profile.png" alt="Profile" width="30" height="30" class="rounded-circle">
+                <span>Thet The Aung</span>
+                <h6>Just now</h6>
+                <p>Happy Monday!</p>
+                </div>
+            </div>
             <div class="col-sm-2"></div>
         </div>
     </div>
