--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200&family=Pacifico&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c25cabee86.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,14 +51,31 @@
                 </ul>                
             </div>
             <div class="col-sm-8 post">
-                <div class="story">
+                <div class="story mb-3">
                 <img src="images/profile.png" alt="Profile" width="30" height="30" class="rounded-circle">
-                <span>Thet The Aung</span>
-                <h6>Just now</h6>
-                <p>Happy Monday!</p>
+                <span>Thet Thet Aung</span>
+                <h6>Just now  <i class="fa-solid fa-globe" style="color:rgb(69, 59, 79);font-size:10px;"></i></h6>
+                <p>Happy Friday!</p>
+                <p>During web developing time,we are really exciting for making project.</p>
+                <img src="images/post1.png" alt="Post1" class="img-thumbnail">
+                <i class="fa-regular fa-thumbs-up fa-xl" style="margin:10px;cursor: pointer;"></i>
+                <i class="fa-regular fa-comment fa-xl"></i>
+                <i class="fa-solid fa-share fa-xl"></i>
+                </div>
+
+                <div class="story">
+                    <img src="images/profile.png" alt="Profile" width="30" height="30" class="rounded-circle">
+                    <span>Thet Thet Aung</span>
+                    <h6>30 minutes ago  <i class="fa-solid fa-user-lock" style="color:rgb(69, 59, 79);font-size:10px;"></i></h6>
+                    <p>Happy Friday!</p>
+                    <p>During web developing time,we are really exciting for making project.</p>
+                    <img src="images/post2.png" alt="Post1" class="img-thumbnail">
                 </div>
             </div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-2">
+                <h4>ADVERTISEMENT</h4>
+                <img src="images/ads1.jpg" alt="Ads1" width="150" height="400">
+            </div>
         </div>
     </div>
 
