--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
                 <p>Happy Friday!</p>
                 <p>During web developing time,we are really exciting for making project.</p>
                 <img src="images/post1.png" alt="Post1" class="img-thumbnail">
-                <i class="fa-regular fa-thumbs-up fa-xl" style="margin:10px;cursor: pointer;"></i>
-                <i class="fa-regular fa-comment fa-xl"></i>
-                <i class="fa-solid fa-share fa-xl"></i>
+                <div>
+                    <i class="fa-regular fa-thumbs-up fa-xl" style="margin:10px;cursor: pointer;" data-bs-toggle="tooltip" data-bs-placement="top" title="Like"></i>
+                    <i class="fa-regular fa-comment fa-xl" data-bs-toggle="tooltip" data-bs-placement="top" title="Comment"></i>
+                    <i class="fa-solid fa-share fa-xl" data-bs-toggle="tooltip" data-bs-placement="top" title="Share"></i>
+                </div>
                 </div>
 
                 <div class="story">
