--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <p>Happy Friday!</p>
                 <p>During web developing time,we are really exciting for making project.</p>
                 <img src="images/post1.png" alt="Post1" class="img-thumbnail">
-                <div>
+                <div class="reaction">
                     <i class="fa-regular fa-thumbs-up fa-xl" style="margin:10px;cursor: pointer;" data-bs-toggle="tooltip" data-bs-placement="top" title="Like"></i>
                     <i class="fa-regular fa-comment fa-xl" data-bs-toggle="tooltip" data-bs-placement="top" title="Comment"></i>
                     <i class="fa-solid fa-share fa-xl" data-bs-toggle="tooltip" data-bs-placement="top" title="Share"></i>
@@ -71,7 +71,7 @@
                     <h6>30 minutes ago  <i class="fa-solid fa-user-lock" style="color:rgb(69, 59, 79);font-size:10px;"></i></h6>
                     <p>Happy Friday!</p>
                     <p>During web developing time,we are really exciting for making project.</p>
-                    <img src="images/post2.png" alt="Post1" class="img-thumbnail">
+                    <img src="images/post1.png" alt="Post1" class="img-thumbnail">
                 </div>
             </div>
             <div class="col-sm-2">
@@ -81,8 +81,63 @@
         </div>
     </div>
 
-    <div class="mt-5 p-4 text-center">
-        <p>Copyright @copy;. All right reserved by Tr.Thet Thet Aung</p>
+    <div class="mt-5 p-4 footer">
+        <div class="row">
+            <div class="col-md-4 p-5">
+                <h4><i class="fa-brands fa-bootstrap"></i> Bootstrap</h4>
+                <p>
+                    Designed and built with all the love in the world by the <a href="https://getbootstrap.com">Bootstrap team</a> with the help of <a href="https://getbootstrap.com">our contributors</a>.
+                </p>
+            </div>
+            <div class="col-md-2">
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Docs</a></li>
+                    <li><a href="">Example</a></li>
+                    <li><a href="">Icons</a></li>
+                    <li><a href="">Themes</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Swang Flag</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <h4>Guides</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Docs</a></li>
+                    <li><a href="">Example</a></li>
+                    <li><a href="">Icons</a></li>
+                    <li><a href="">Themes</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Swang Flag</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <h4>Projects</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Docs</a></li>
+                    <li><a href="">Example</a></li>
+                    <li><a href="">Icons</a></li>
+                    <li><a href="">Themes</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Swang Flag</a></li>
+                </ul>
+            </div>
+            <div class="col-md-2">
+                <h4>Communities</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Docs</a></li>
+                    <li><a href="">Example</a></li>
+                    <li><a href="">Icons</a></li>
+                    <li><a href="">Themes</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Swang Flag</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
